New config, fixed bugs and css change.
* Added new configuration for the port of the web server.
* Changed the image `containerCreation2.png`.
* Changed the margin for h2 element.
* Fixed the creation of the elements while adding new ports creating a container.

--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -331,6 +331,7 @@
                 const elem = document.getElementById("ports");
 
                 var div = document.createElement("div");
+                div.className = "small-container";
                 var portHost = document.createElement("input");
                 portHost.className = "input-extrasmall";
                 portHost.type = "text";
