--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -138,7 +138,6 @@
                         } else if(eChildren[x].type == "number"){
                             saveToConfig(eChildren[x].id, parseInt(eChildren[x].value));
                         } else if(eChildren[x].type == "checkbox"){
-                            console.log(eChildren[x]);
                             saveToConfig(eChildren[x].id, (eChildren[x].checked === "true"));
                         } else if(eChildren[x].tagName == "SELECT"){
                             saveToConfig(eChildren[x].id, eChildren[x].value);
@@ -216,7 +215,7 @@
                 }
 
                 const binds = document.getElementById("Binds");
-                const bindsElems = cmd.getElementsByTagName("div");
+                const bindsElems = binds.getElementsByTagName("div");
                 var input;
                 config.Binds = [];
                 for(let i=0; i<bindsElems.length; i++){
